# clue

./: .gitignore  .mise.toml  CLAUDE.md  LICENSE  README.md  Taskfile.yml  noxfile.py  pyproject.toml  setup.ps1  setup.sh
.streamlit/: config.toml
docs/: data-accuracy.md  how-it-works.md  product-walkthrough.md  team-dashboard-plan.md
scripts/: capture_screenshots.py  generate_mock_db.py  seed_demo_db.py  take_screenshots.js  take_screenshots.py
src/clue/: __init__.py  __main__.py  cli.py  db.py  export.py  extractor.py  git_utils.py  insights.py  models.py  patterns.py  pipeline.py  scorer.py  security.py
src/clue/dashboard/: _data.py  _helpers.py  app.py
tests/: conftest.py  test_cli.py  test_db.py  test_export.py  test_extractor.py  test_gaps.py  test_git_utils.py  test_integration.py  test_scorer.py
